<resources>
    <string name="app_name">maytinh</string>
    <string name="btn_clear_entry">CE</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">BS</string>
    <string name="op_div">/</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="op_mul">x</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="op_sub">-</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="op_add">+</string>
    <string name="op_sign">+/-</string>
    <string name="num_0">0</string>
    <string name="op_dot">.</string>
    <string name="op_equal">=</string>
</resources>